tests/specs/ecosystem/sylc/step_spinner/0_0_1.test
sylc/step-spinner/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Download https://jsr.io/@std/cli/meta.json
Download https://jsr.io/@std/cli/0.224.0_meta.json
Download https://jsr.io/@std/cli/0.224.0/spinner.ts

error: TS2377 [ERROR]: Constructors for derived classes must contain a 'super' call.
  constructor(msg: string | SpinnerOptions){}
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/StepSpinner.ts:4:3

